# resource

./: .gitignore  .travis.yml  Cargo.toml  README.md  alltests  build.rs  nightly-tests  run_tests  stable-tests
custom_path/tests/: str.txt
dynamic-feature-tests/: Cargo.toml
dynamic-feature-tests/files/: str.txt
dynamic-feature-tests/src/: lib.rs
resource_list_proc_macro/: Cargo.toml  README.md
resource_list_proc_macro/src/: lib.rs
scripts/: test_all_features.sh
src/: lib.rs
static-feature-tests/: Cargo.toml
static-feature-tests/src/: lib.rs
tests/: debug_release_tests.rs  dynamic_tests.rs  multi_file_tests.rs  single_file_transform_tests.rs  static_tests.rs  string_a.txt  string_b.txt  string_c.txt
