[package]
name = "resource"
version = "0.3.0"
authors = ["Claire Harris <wishing.engine@gmail.com>"]
edition = "2018"
description = """
Macros for statically including assets in release mode, but dynamically loading them in debug mode.

This is primarily intended for games, allowing you to both avoid file IO in release builds and dynamically reload assets in debug mode.
"""
repository = "https://github.com/mistodon/resource"
readme = "README.md"
keywords = ["static", "include", "assets", "release"]
categories = ["filesystem", "games"]
license = "CC0-1.0"

[badges]
travis-ci = { repository = "mistodon/resource", branch = "master" }

[dependencies]

[features]
default = []
force-static = []
force-dynamic = []
