[package]
name = "resource"
version = "0.6.0"
authors = ["Vi <violet@hey.com>"]
edition = "2024"
description = """
Macros for statically including assets in release mode, but dynamically loading them in debug mode.

This is primarily intended for games, allowing you to both avoid file IO in release builds and dynamically reload assets in debug mode.
"""
repository = "https://github.com/mistodon/resource"
readme = "README.md"
keywords = ["static", "include", "assets", "release"]
categories = ["filesystem", "games"]
license = "CC0-1.0"

[dependencies]
resource_list_proc_macro = { version = "=0.6.0", path = "./resource_list_proc_macro" }

[workspace]
members = [".", "resource_list_proc_macro"]

[features]
default = []
force-static = []
force-dynamic = []
