[package]

name = "resource_list_proc_macro"
version = "0.6.0"
authors = ["Vi <violet@hey.com>"]
edition = "2024"
description = """
Procedural macros for the `resource` crate.
"""
repository = "https://github.com/mistodon/resource"
readme = "README.md"
keywords = []
categories = []
license = "CC0-1.0"

[lib]
proc-macro = true

[dependencies]
quote = "1"
